service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80       # Port exposed on the LoadBalancer
      targetPort: 8080  # Port on which the application is running inside the container
